<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    tools:context=".SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/card_background">

        <ImageView
            android:id="@+id/arrowBackSignIN"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/arrowRightBack"
            app:layout_constraintStart_toEndOf="@+id/arrowBackSignIN"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/arrowRightBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/constraintLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/linear_layout_bg">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
               />

            <EditText
                android:id="@+id/userLogInEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:paddingLeft="20dp"
                android:background="@drawable/edit_text_bg"/>
            <EditText
                android:id="@+id/userLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:inputType="textWebPassword"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:paddingLeft="20dp"
                android:background="@drawable/edit_text_bg"/>

            <Button
                android:id="@+id/userLogInBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:background="@drawable/log_in_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create Your account"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  SignUP"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/card_background"/>
            </LinearLayout>


        </LinearLayout>

        </ScrollView>


    </LinearLayout>

</RelativeLayout>